style: fix heading size on mobile

--- a/src/templates/tpl_modified/css/grandeljay_wordpress_integration_blog_default.css
+++ b/src/templates/tpl_modified/css/grandeljay_wordpress_integration_blog_default.css
@@ -14,6 +14,14 @@ section:last-of-type {
 }
 
 /**
+ * Headings
+ */
+section .layout_content_inner.cf > h1,
+section .layout_content_inner.cf > .blog > h1 {
+    font-size: 2em;
+}
+
+/**
  * Buttons
  */
 a.button,
